// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge color alert sets background-color and color 1`] = `
.c0 {
  border-radius: 99999px;
  display: inline-block;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.025em;
  -moz-letter-spacing: 0.025em;
  -ms-letter-spacing: 0.025em;
  letter-spacing: 0.025em;
  font-size: 12px;
  font-weight: 700;
  line-height: 1.25;
  -webkit-letter-spacing: 0.025em;
  -moz-letter-spacing: 0.025em;
  -ms-letter-spacing: 0.025em;
  letter-spacing: 0.025em;
  text-transform: uppercase;
  line-height: 1.4;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  background-color: #f68013;
  color: #fff;
}

<div
  className="c0"
  color="alert"
  size="medium"
/>
`;

exports[`Badge color error sets background-color and color 1`] = `
.c0 {
  border-radius: 99999px;
  display: inline-block;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.025em;
  -moz-letter-spacing: 0.025em;
  -ms-letter-spacing: 0.025em;
  letter-spacing: 0.025em;
  font-size: 12px;
  font-weight: 700;
  line-height: 1.25;
  -webkit-letter-spacing: 0.025em;
  -moz-letter-spacing: 0.025em;
  -ms-letter-spacing: 0.025em;
  letter-spacing: 0.025em;
  text-transform: uppercase;
  line-height: 1.4;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  background-color: #c00;
  color: #fff;
}

<div
  className="c0"
  color="error"
  size="medium"
/>
`;

exports[`Badge color error.light sets background-color and color 1`] = `
.c0 {
  border-radius: 99999px;
  display: inline-block;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.025em;
  -moz-letter-spacing: 0.025em;
  -ms-letter-spacing: 0.025em;
  letter-spacing: 0.025em;
  font-size: 12px;
  font-weight: 700;
  line-height: 1.25;
  -webkit-letter-spacing: 0.025em;
  -moz-letter-spacing: 0.025em;
  -ms-letter-spacing: 0.025em;
  letter-spacing: 0.025em;
  text-transform: uppercase;
  line-height: 1.4;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  background-color: #fbebeb;
  color: #001833;
}

<div
  className="c0"
  color="error.light"
  size="medium"
/>
`;

exports[`Badge color primary sets background-color and color 1`] = `
.c0 {
  border-radius: 99999px;
  display: inline-block;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.025em;
  -moz-letter-spacing: 0.025em;
  -ms-letter-spacing: 0.025em;
  letter-spacing: 0.025em;
  font-size: 12px;
  font-weight: 700;
  line-height: 1.25;
  -webkit-letter-spacing: 0.025em;
  -moz-letter-spacing: 0.025em;
  -ms-letter-spacing: 0.025em;
  letter-spacing: 0.025em;
  text-transform: uppercase;
  line-height: 1.4;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  background-color: #0068EF;
  color: #fff;
}

<div
  className="c0"
  color="primary"
  size="medium"
/>
`;

exports[`Badge color primary.light sets background-color and color 1`] = `
.c0 {
  border-radius: 99999px;
  display: inline-block;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.025em;
  -moz-letter-spacing: 0.025em;
  -ms-letter-spacing: 0.025em;
  letter-spacing: 0.025em;
  font-size: 12px;
  font-weight: 700;
  line-height: 1.25;
  -webkit-letter-spacing: 0.025em;
  -moz-letter-spacing: 0.025em;
  -ms-letter-spacing: 0.025em;
  letter-spacing: 0.025em;
  text-transform: uppercase;
  line-height: 1.4;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  background-color: #e8f2ff;
  color: #001833;
}

<div
  className="c0"
  color="primary.light"
  size="medium"
/>
`;

exports[`Badge color secondary sets background-color and color 1`] = `
.c0 {
  border-radius: 99999px;
  display: inline-block;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.025em;
  -moz-letter-spacing: 0.025em;
  -ms-letter-spacing: 0.025em;
  letter-spacing: 0.025em;
  font-size: 12px;
  font-weight: 700;
  line-height: 1.25;
  -webkit-letter-spacing: 0.025em;
  -moz-letter-spacing: 0.025em;
  -ms-letter-spacing: 0.025em;
  letter-spacing: 0.025em;
  text-transform: uppercase;
  line-height: 1.4;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  background-color: #0a0;
  color: #fff;
}

<div
  className="c0"
  color="secondary"
  size="medium"
/>
`;

exports[`Badge color secondary.light sets background-color and color 1`] = `
.c0 {
  border-radius: 99999px;
  display: inline-block;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.025em;
  -moz-letter-spacing: 0.025em;
  -ms-letter-spacing: 0.025em;
  letter-spacing: 0.025em;
  font-size: 12px;
  font-weight: 700;
  line-height: 1.25;
  -webkit-letter-spacing: 0.025em;
  -moz-letter-spacing: 0.025em;
  -ms-letter-spacing: 0.025em;
  letter-spacing: 0.025em;
  text-transform: uppercase;
  line-height: 1.4;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  background-color: #ecf7ec;
  color: #001833;
}

<div
  className="c0"
  color="secondary.light"
  size="medium"
/>
`;

exports[`Badge renders 1`] = `
.c0 {
  border-radius: 99999px;
  display: inline-block;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.025em;
  -moz-letter-spacing: 0.025em;
  -ms-letter-spacing: 0.025em;
  letter-spacing: 0.025em;
  font-size: 12px;
  font-weight: 700;
  line-height: 1.25;
  -webkit-letter-spacing: 0.025em;
  -moz-letter-spacing: 0.025em;
  -ms-letter-spacing: 0.025em;
  letter-spacing: 0.025em;
  text-transform: uppercase;
  line-height: 1.4;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  color: #001833;
  background-color: #f4f6f8;
}

<div
  className="c0"
  color="text"
  size="medium"
/>
`;

exports[`Badge renders small 1`] = `
.c0 {
  border-radius: 99999px;
  display: inline-block;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.025em;
  -moz-letter-spacing: 0.025em;
  -ms-letter-spacing: 0.025em;
  letter-spacing: 0.025em;
  font-size: 10px;
  font-weight: 700;
  line-height: 1.4;
  line-height: 1.25;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  color: #001833;
  background-color: #f4f6f8;
}

<div
  className="c0"
  color="text"
  size="small"
/>
`;
